--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 .wrapper-content {
     display: flex;
@@ -27,12 +27,12 @@ body {
 .navbar-collapse.header-desktop .nav-link {
     display: block;
     padding: 0.5rem 0.5rem;
-    color: #101531!important;
+    color: #101531 !important;
     letter-spacing: 0.5px;
     font-size: 16px;
 }
 .navbar-collapse.header-desktop .nav-link:hover {
-    color: #b56953!important;
+    color: #b56953 !important;
 }
 .navbar-brandsdfd {
     width: 100%;
@@ -77,7 +77,7 @@ body {
     list-style: none;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.15);
+    border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 0.25rem;
 }
 .button-login {
@@ -87,6 +87,16 @@ body {
     background-color: #ffd90d;
     border: 1px solid #ffd90d;
     margin-left: 10px;
+    padding: 0 10px;
+}
+.button-login:active {
+    background-color: transparent !important;
+    border-color: #ffd90d!important;
+}
+.button-login:focus {
+    box-shadow: unset!important;
+    border-color: unset!important;
+    outline: none!important;
 }
 .button-login:hover {
     background-color: transparent;
@@ -103,11 +113,32 @@ body {
     color: #fff;
     line-height: inherit;
 }
-
+.dropdown-menu li {
+    position: relative;
+}
+.dropdown-menu .dropdown-submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+}
+.dropdown-menu .dropdown-submenu-left {
+    right: 100%;
+    left: auto;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+    display: block;
+}
+.dropdown-item.active, .dropdown-item:active {
+    color: #ffd90d;
+    text-decoration: none;
+    background-color: #f8f9fa;
+}
 
 /* ================ video section banner =============== */
 .banner-video {
     padding: 10px 0;
+    padding-top: 0;
 }
 .video-outer {
     width: 100%;
@@ -156,14 +187,14 @@ body {
     height: 100%;
     object-fit: cover;
 }
-.banner-video .col-12{
-/*    border: 1px solid #000;*/
+.banner-video .col-12 {
+    /*    border: 1px solid #000;*/
 }
 .padding-left {
-    padding-left: 0!important;
+    padding-left: 0 !important;
 }
 .padding-right {
-    padding-right: 0!important;
+    padding-right: 0 !important;
 }
 /* ================ video section banner =============== */
 /*===================== header top fixe css =================== */
@@ -176,7 +207,6 @@ body {
     height: auto;
     background-color: #fff;
     z-index: 1;
-    box-shadow: 0 5px 5px -5px #333;
 }
 .change .navbar-brandsdfd {
     width: 100%;
@@ -206,12 +236,21 @@ footer.footer-sx {
     margin: 0;
     display: block;
     width: 100%;
-    background-color: #ffd90d;
+    background-color: #fff;
     color: #fff;
     text-align: center;
 }
+.change-color {
+    background-color: #ffd90d!important;
+}
+.change-color #footer-info a {
+    color: #fff!important;
+}
+#footer-info {
+    color: #333;
+}
 div#footer-info a {
-    color: #000;
+    color: #ffd90d;
     font-size: 18px;
     padding: 0;
     margin: 0;
@@ -225,3 +264,338 @@ div#footer-info {
     text-transform: capitalize;
 }
 /* ============== footer section code ============== */
+
+/* ============= profie card css code ================ */
+.advitisment-outer {
+    padding: 50px 15px;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: #ffd90d;
+    position: relative;
+
+}
+.profileImage {
+    width: 100%;
+    height: auto;
+    max-width: 100px;
+    margin: auto;
+}
+.profileImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.profile-content h1 {
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin-top: 10px;
+    font-size: 26px;
+    color: #333;
+}
+.profile-content p {
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    color: #333;
+}
+.profile-addresss ul {
+    padding: 0;
+    margin-top: 25px;
+    width: 100%;
+    list-style: none;
+    display: block;
+}
+.profile-addresss ul li {
+    padding: 3px 0;
+    margin: 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+.profile-addresss ul li span {
+    font-size: 14px;
+    font-weight: normal;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+}
+.profile-addresss ul li span a {
+    padding: 0;
+    margin: 0;
+    color: #333;
+    text-decoration: none!important;
+}
+.profile-addresss ul li span a:hover {
+    color: #fff;
+}
+.social-media {
+    padding: 0;
+    margin: 0;
+    display: block;
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+.social-media li {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social-media li a {
+    color: #333;
+}
+.social-media li i.fa {
+    font-size: 20px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.social-media li i.fa:hover {
+    color: #fff;
+    transform: rotate(360deg);
+    transition: 0.5s;
+}
+/* ============= profie card css code ================ */
+
+/* ============= inspection list css code ================ */
+.table-list table thead tr th {
+    font-size: 16px;
+    color: #333;
+}
+.table-list table thead tr th, .table-list table tbody tr td {
+    border: 0;
+    padding: 15px 0;
+}
+.table-list table thead tr, .table-list table tbody tr {
+    border-bottom: 1px solid #ebe7e7;
+}
+a.no-underline.group {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    text-decoration: none;
+}
+.david-mcbride {
+    font-size: 18px;
+    font-weight: 500;
+    color: #ffd90d;
+    margin-bottom: 2px;
+}
+.home-inspection-s {
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+}
+.edit-profile {
+    font-size: 28px;
+    text-decoration: none;
+    color: #ffd90d;
+    padding: 0;
+    margin: 0;
+}
+.edit-profile .fa-angle-right {
+    margin-left: 15px;
+}
+.edit-profile:hover {
+    color: #333;
+    text-decoration: none;
+}
+.inspection-content h1 {
+    font-size: 42px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    padding: 0;
+    width: 100%;
+    color: #333;
+}
+.inspection-content p {
+    display: block;
+    padding: 0;
+    margin-bottom: 15px;
+    color: #101531 !important;
+    letter-spacing: 0.5px;
+    font-size: 16px;
+}
+a.total-three {
+    font-size: 16px;
+    color: #ffd90d;
+    text-decoration: none;
+    font-weight: 500;
+}
+.addvertise-add {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.addvertise-add img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.Huntsville {
+    width: 100%;
+    min-height: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+header#desktop-menu {
+    border-bottom: 1px solid #f5f5f5;
+}
+.no-underline.group.Huntsville1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    min-height: 55px;
+}
+/* ============= inspection list css code ================ */
+
+/* ============= video section css code ================ */
+.main-content {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: auto;
+}
+
+.box {
+    padding: 30px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 2px 30px rgba(0, 0, 0, 0.1);
+}
+@media (min-width: 768px) {
+    .box {
+        padding: 50px;
+    }
+}
+
+.align-center {
+    align-items: center;
+}
+
+.video-block {
+    position: relative;
+}
+.video-block .video-image {
+    position: relative;
+    margin-top: 30px;
+}
+.video-block .video-image .img-overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(45deg, #009cd5, #0069b9);
+    opacity: 0.9;
+    border-radius: 10px;
+}
+.video-block .video-image img {
+    height: 400px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 5px 30px -3px rgba(0, 0, 0, 0.1);
+}
+.video-block .video-image .play-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 60px;
+    width: 60px;
+    border-radius: 100px;
+    background: #fff;
+    color: #2196f3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.video-block .video-image .play-btn:before,
+.video-block .video-image .play-btn:after {
+    content: "";
+    color: transparent;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    bottom: 0;
+    left: 0;
+    transition: 0.5s;
+    border-radius: 50%;
+    border: 1px solid;
+    background: rgba(255, 255, 255, 0.253);
+}
+.video-block .video-image .play-btn:before {
+    animation: ring-wave 2s linear infinite;
+}
+.video-block .video-image .play-btn:after {
+    animation: ring-wave 2s linear 1s infinite;
+}
+.video-block .video-image .play-btn:hover {
+    text-decoration: none;
+}
+.video-block .video-image .play-btn i {
+    font-size: 22px;
+    margin-left: 5px;
+}
+
+@keyframes ring-wave {
+    0% {
+        transform: scale(1);
+    }
+    75% {
+        transform: scale(1.75);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(2);
+        opacity: 0;
+    }
+}
+video.video-ouer-sd {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.add, .add i.fa {
+    display: none!important;
+}
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    background-color: #fff!important.button-login;
+}
+.Read-More {
+    border: 1px solid #ffd90d;
+    background-color: #ffd90d;
+    color: #fff;
+    padding: 10px 30px;
+    margin-top: 20px;
+    display: inline-block;
+    text-decoration: none;
+    transition: 0.5s;
+}
+.Read-More:hover {
+    background-color: transparent;
+    color: #ffd90d;
+    text-decoration: none;
+}
+.coor-dfsd {
+    color: #ffd90d;
+}
+/* ============= video section css code ================ */
